refactor(mentor): 정적 팩토리 메소드 추가, entity별  update 통합이외 코드 스타일 변경